--- a/package.json
+++ b/package.json
@@ -1,31 +1,52 @@
 {
-  "name": "quiz-builder",
+  "name": "dragon-eye",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --open --port 3000",
-    "build": "tsc && vite build",
+    "dev": "vite --port 3000",
+    "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "gen": "npx generate-react-cli component"
   },
   "dependencies": {
-    "prettier": "^3.2.5",
+    "@ag-grid-community/client-side-row-model": "^31.2.1",
+    "@ag-grid-community/styles": "^31.2.1",
+    "@nextui-org/react": "^2.3.5",
+    "@reduxjs/toolkit": "^2.2.3",
+    "ag-grid-community": "^31.2.1",
+    "ag-grid-react": "^31.2.1",
+    "classnames": "^2.5.1",
+    "dnt-readerjs": "^0.0.8",
+    "framer-motion": "^11.1.7",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.20.0",
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.22.3",
+    "react-table": "^7.8.0",
     "sass": "^1.71.1",
-    "sass-loader": "^14.1.1"
+    "sass-loader": "^14.1.1",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/react-highlight-words": "^0.16.7",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   }
