--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
       "pages/*": ["pages/*"],
       "shared/*": ["shared/*"],
       "styles/*": ["styles/*"],
-      "routes/*": ["routes/*"]
+      "routes/*": ["routes/*"],
+      "icons/*": ["icons/*"],
+      "store/*": ["store/*"]
     }
   },
   "include": ["src"],
