--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dragon-eye",
   "private": true,
-  "homepage": "https://dragon-eye.vercel.app/",
+  "homepage": "https://dragon-eye-git-fixrouterproduction-alicestoneprods-projects.vercel.app/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
