--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-table": "^7.8.0",
